--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-typing-effect": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
